--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,14 +1,19 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
+  display: grid;
+  grid-template-areas:
+  'leftMenu main';
+
+  grid-template-rows: 1fr;
+  grid-template-columns: 280px 1fr 376px;
 }
 
 .main {
+  grid-area: 'main';
+}
+
+/* .main {
   padding: 5rem 0;
   flex: 1;
   display: flex;
@@ -118,4 +123,4 @@
     width: 100%;
     flex-direction: column;
   }
-}
+} */
